name:               ultra-semigroups
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014-2017
synopsis:           Ultra Semigroups
category:           Data
description:        Ultra Semigroups
homepage:           https://github.com/domdere/ultra
bug-reports:        https://github.com/domdere/ultra/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/ultra/ultra-semigroups.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   domdere-preamble
                    ,   semigroups                  == 0.18.*

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Ultra.Data.List.NonEmpty

test-suite              quickcheck
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     quickcheck
    build-depends:      base                >= 4 && < 5
                    ,   domdere-preamble
                    ,   QuickCheck          == 2.8.*
                    ,   ultra-semigroups

    other-modules:      Test.Ultra.Data.List.NonEmpty
