name:               ultra-text
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014-2016
synopsis:           text, done ultra
category:           Data
description:        text, done ultra
homepage:           https://github.com/domdere/ultra
bug-reports:        https://github.com/domdere/ultra/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/ultra.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   bytestring          == 0.10.*
                    ,   preamble
                    ,   text                == 1.2.*

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Ultra.Data.Text
                        Ultra.Data.Text.Encoding
                        Ultra.Data.Text.IO

    default-extensions: NoImplicitPrelude

test-suite              quickcheck
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     quickcheck
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   preamble
                    ,   QuickCheck              == 2.8.*
                    ,   quickcheck-instances    == 0.3.*
                    ,   ultra-text

    default-extensions: NoImplicitPrelude
