name:               ultra-unordered-containers
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014-2018
synopsis:           ultra hashmaps and stuff
category:           Data
description:        ultra hashmaps and stuff
homepage:           https://github.com/domdere/ultra
bug-reports:        https://github.com/domdere/ultra/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/ultra.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                      , containers
                      , array
                      , domdere-preamble
                      , hashable                == 1.2.*
                      , ultra-core
                      , unordered-containers    == 0.2.*

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Ultra.Data.HashMap.Lazy
                        Ultra.Data.HashMap.Strict
                        Ultra.Data.HashSet

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                      , domdere-preamble
                      , hashable                  == 1.2.*
                      , lab-hedgehog-core
                      , ultra-unordered-containers
                      , unordered-containers      == 0.2.*

    other-modules:      Test.Ultra.Data.HashMap.Strict
